kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__assert_stmt_recovery_1.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"assert a.\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assert(
                AssertStmt {
                    test: Node {
                        node: Identifier(
                            Identifier {
                                names: [
                                    Node {
                                        node: "a",
                                        filename: "",
                                        line: 1,
                                        column: 7,
                                        end_line: 1,
                                        end_column: 8,
                                    },
                                    Node {
                                        node: "",
                                        filename: "",
                                        line: 1,
                                        column: 9,
                                        end_line: 1,
                                        end_column: 9,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 9,
                    },
                    if_cond: None,
                    msg: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 9,
        },
    ],
    comments: [],
}
