kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__assign_stmt_recovery_17.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"a.b[1 + 1].e = 1\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "a",
                                    filename: "",
                                    line: 1,
                                    column: 0,
                                    end_line: 1,
                                    end_column: 1,
                                },
                                paths: [
                                    Member(
                                        Node {
                                            node: "b",
                                            filename: "",
                                            line: 1,
                                            column: 2,
                                            end_line: 1,
                                            end_column: 3,
                                        },
                                    ),
                                    Index(
                                        Node {
                                            node: Binary(
                                                BinaryExpr {
                                                    left: Node {
                                                        node: NumberLit(
                                                            NumberLit {
                                                                binary_suffix: None,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 4,
                                                        end_line: 1,
                                                        end_column: 5,
                                                    },
                                                    op: Add,
                                                    right: Node {
                                                        node: NumberLit(
                                                            NumberLit {
                                                                binary_suffix: None,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 8,
                                                        end_line: 1,
                                                        end_column: 9,
                                                    },
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 4,
                                            end_line: 1,
                                            end_column: 9,
                                        },
                                    ),
                                    Member(
                                        Node {
                                            node: "e",
                                            filename: "",
                                            line: 1,
                                            column: 11,
                                            end_line: 1,
                                            end_column: 12,
                                        },
                                    ),
                                ],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 12,
                        },
                    ],
                    value: Node {
                        node: NumberLit(
                            NumberLit {
                                binary_suffix: None,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 15,
                        end_line: 1,
                        end_column: 16,
                    },
                    ty: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 16,
        },
    ],
    comments: [],
}
